--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "Tal Bener Hello World",
+    "name": "tbener Jira Extension",
     "version": "1.0",
-    "description": "tbener extension",
+    "description": "tbener extension for Jira",
     "content_scripts": [
         {
             "css": [
@@ -24,7 +24,7 @@
     "icons": {
         "16": "images/icon-16.png",
         "32": "images/icon-32.png",
-        "48": "images/icon-48.png",
-        "128": "images/icon-128.png"
+        "48": "images/icon-96.png",
+        "128": "images/icon-96.png"
     }
 }
