--- a/manifest.json
+++ b/manifest.json
@@ -32,6 +32,10 @@
             "run_at": "document_idle"
         },
         {
+            "js": [
+                "jira-pages/modal/add-copy-link.js", 
+                "jira-pages/common/copy-link.js"
+            ],
             "css": [
                 "jira-pages/modal/freeze-title.css"
             ],
