--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,9 @@
     "version": "1.0.3",
     "description": "MDClone extension for Jira, by Tal Bener",
     "author": "tbener@gmail.com",
+    "background": {
+        "service_worker": "background.js"
+    },
     "action": {
         "default_popup": "pages/popup/popup.html",
         "default_icon": "images/icon-32.png"
@@ -20,7 +23,7 @@
     "content_scripts": [
         {
             "js": [
-                "jira-pages/main/add-copy-link.js", 
+                "jira-pages/main/add-copy-link.js",
                 "jira-pages/common/copy-link.js"
             ],
             "css": [
@@ -33,7 +36,7 @@
         },
         {
             "js": [
-                "jira-pages/modal/add-copy-link.js", 
+                "jira-pages/modal/add-copy-link.js",
                 "jira-pages/common/copy-link.js"
             ],
             "css": [
