--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,10 @@
 {
     "manifest_version": 3,
     "name": "MDClone Jira Extension",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "description": "MDClone extension for Jira, by Tal Bener",
     "author": "tbener@gmail.com",
+    "omnibox": { "keyword" : "aa" },
     "background": {
         "service_worker": "background.js"
     },
