--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,10 @@
 {
     "manifest_version": 3,
     "name": "MDClone Jira Extension",
-    "version": "1.0.5",
+    "version": "1.0.6",
     "description": "MDClone extension for Jira, by Tal Bener",
     "author": "tbener@gmail.com",
+    // "content_security_policy": "script-src 'self'; https://*.atlassian.net; object-src 'self'",
     "background": {
         "service_worker": "background.js"
     },
