- changed shortcut key to Alt+J

--- a/manifest.json
+++ b/manifest.json
@@ -15,8 +15,8 @@
     "commands": {
         "_execute_action": {
             "suggested_key": {
-                "default": "Alt+Shift+J",
-                "mac": "Command+Shift+J"
+                "default": "Alt+J",
+                "mac": "Command+J"
             }
         }
     },
