--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
+theme: architect
 title: Chrome Jira Extension Documentation
 description: Installation and Usage Guide for MDClone Chrome Jira Extension
