--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,5 @@
-theme: architect
+remote_theme: pages-themes/architect@v0.2.0
+plugins:
+- jekyll-remote-theme
 title: Chrome Jira Extension Documentation
 description: Installation and Usage Guide for MDClone Chrome Jira Extension
