--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "version": "1.0.7",
     "description": "MDClone extension for Jira, by Tal Bener",
     "author": "tbener@gmail.com",
-    // "content_security_policy": "script-src 'self'; https://*.atlassian.net; object-src 'self'",
+    "content_security_policy": "script-src 'self'; https://*.atlassian.net; object-src 'self'",
     "background": {
         "service_worker": "background.js"
     },
