--- a/manifest.json
+++ b/manifest.json
@@ -56,6 +56,7 @@
         "128": "images/icon-96.png"
     },
     "permissions": [
-        "storage"
+        "storage",
+        "tabs"
     ]
 }
