--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
     "name": "MDClone Jira Extension",
-    "version": "1.0.11",
-    "description": "MDClone extension for Jira, by Tal Bener",
+    "version": "1.0.12",
+    "description": "MDClone Extension for Jira, by Tal Bener",
     "author": "tbener@gmail.com",
     "background": {
         "service_worker": "background.js"
