--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,8 @@
     "manifest_version": 3,
     "name": "MDClone Jira Extension",
     "version": "1.0.12",
+    "key": "cahojkigicegnlnghbnoigeibdnicpap",
+    "update_url": "https://raw.githubusercontent.com/tbener/jira-extension/main/update.xml",
     "description": "MDClone Extension for Jira, by Tal Bener",
     "author": "tbener@gmail.com",
     "background": {
