--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
     "description": "MDClone Extension for Jira, by Tal Bener",
     "author": "tbener@gmail.com",
     "background": {
-        "service_worker": "background.js"
+        "service_worker": "background.js",
+        "type": "module"
     },
     "action": {
         "default_popup": "pages/popup/popup.html",
