--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "MDClone Jira Extension",
-    "version": "1.2.1",
+    "version": "1.2.2",
     "key": "cahojkigicegnlnghbnoigeibdnicpap",
     "update_url": "https://raw.githubusercontent.com/tbener/jira-extension/main/update.xml",
     "description": "MDClone Extension for Jira, by Tal Bener",
@@ -26,9 +26,7 @@
     "content_scripts": [
         {
             "js": [
-                "common/settings.js",
-                "jira-pages/common/copy-link.js",
-                "jira-pages/main/add-copy-link.js"
+                "jira-pages/main/scripts-init.js"
             ],
             "css": [
                 "jira-pages/main/freeze-title.css"
@@ -40,15 +38,23 @@
         },
         {
             "js": [
-                "common/settings.js",
-                "jira-pages/common/copy-link.js",
-                "jira-pages/modal/add-copy-link.js"
+                "jira-pages/modal/scripts-init.js"
             ],
             "css": [
                 "jira-pages/modal/freeze-title.css"
             ],
             "matches": [
                 "https://*.atlassian.net/jira/software/*"
+            ]
+        }
+    ],
+    "web_accessible_resources": [
+        {
+            "resources": [
+                "*"
+            ],
+            "matches": [
+                "<all_urls>"
             ]
         }
     ],
@@ -59,7 +65,12 @@
         "128": "images/icon-96.png"
     },
     "permissions": [
+        "scripting",
+        "activeTab",
         "storage",
         "tabs"
+    ],
+    "host_permissions": [
+        "https://*.atlassian.net/*"
     ]
 }
