--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "author": "tbener@gmail.com",
     "background": {
         "service_worker": "background.js",
-        "type": "module"
+        "type": "module",
+        "persistent": true
     },
     "action": {
         "default_popup": "pages/popup/popup.html",
