Add date formatting and due date display functionality
- Implemented formatDate function to format due dates.
- Updated HeaderInfo class to use formatDate for displaying due dates.
- Added CSS styles for due date messages.
- Included style.css in the manifest for proper styling.

--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,8 @@
                 "jira-pages/main/scripts-init.js"
             ],
             "css": [
-                "jira-pages/main/freeze-title.css"
+                "jira-pages/main/freeze-title.css",
+                "jira-pages/common/style.css"
             ],
             "matches": [
                 "https://*.atlassian.net/browse/*"
@@ -41,7 +42,8 @@
                 "jira-pages/modal/scripts-init.js"
             ],
             "css": [
-                "jira-pages/modal/freeze-title.css"
+                "jira-pages/modal/freeze-title.css",
+                "jira-pages/common/style.css"
             ],
             "matches": [
                 "https://*.atlassian.net/jira/software/*"
