--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "MDClone Jira Extension",
-    "version": "2.0.2",
-    "key": "cahojkigicegnlnghbnoigeibdnicpap",
-    "update_url": "https://raw.githubusercontent.com/tbener/jira-extension/main/update.xml",
-    "description": "MDClone Extension for Jira, by Tal Bener",
+    "name": "TalTool Jira Extension",
+    "version": "2.0.3",
+    "description": "Extension for Jira, by Tal Bener",
     "author": "tbener@gmail.com",
     "background": {
         "service_worker": "background.js",
